# gay_panic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: citest  test
src/: lib.rs  main.rs
tests/: test_panic.rs
